welcome.lessons.welcome.array.array667.Array667.scala.error
array667:13: error: illegal start of simple expression
        }
        ^